--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div>
                     <input type="button" value="AC"  onclick="display.value = ''">
-                    <input type="button" value="DE"  onclick="display.value =  display.value.tostring().slice(0,-1)">
+                    <input type="button" value="DE"  onclick="display.value =  display.value.toString().slice(0,-1)">
                     <input type="button" value="."  onclick="display.value += '.'">
                     <input type="button" value="/"  onclick="display.value += '/'">
                 </div>
